Updated more codes

--- a/app.json
+++ b/app.json
@@ -8,6 +8,8 @@
     "scheme": "trackerreactnativeproject",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "sdkVersion": "54.0.0",
+    
     "ios": {
       "supportsTablet": true
     },
